<resources>
    <string name="app_name">TosChat</string>
    <string name="facebook_app_id">223131355033555</string>
    <string name="fb_login_protocol_scheme">fb223131355033555</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="firebase_web_client_id">468054001290-936o19so9hs13pk42pcvrae7758gap4d.apps.googleusercontent.com</string>
    <string name="personal_infomation">Profile</string>
    <string name="logout">Log out</string>
    <string name="say_something">Say somthing..</string>
    <string name="login_with">Login with</string>
    <string name="action_logout">Logout</string>
    <string name="action_profile">Profile</string>
    <string name="_12_34_am">12: 34 am</string>
    <string name="good_night">Good night!</string>
    <string name="good_night1">សេចក្ដីសម្រច</string>
    <string name="start_to_chat">Start to chat</string>
    <string name="sign_with_google">Sign in with Google</string>
    <string name="sign_with_facebook">Sign in with Facebook</string>
    <string name="user_image">user image</string>
    <string name="user">User</string>
    <string name="todo">TODO</string>
    <string name="no_friend_to_connect">No friend to connect.</string>

</resources>
