<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="user"
            type="com.message.toschat.model.User" />

        <variable
            name="image"
            type="com.message.toschat.util.DataBindingAdapter" />
    </data>

    <LinearLayout
        android:id="@+id/layout_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            app:cardCornerRadius="@dimen/cardview_default_radius"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/nav_header_vertical_spacing"
            android:layout_marginBottom="6dp"
            android:layout_marginStart="@dimen/nav_header_vertical_spacing"
            android:layout_marginEnd="@dimen/nav_header_vertical_spacing"
            android:elevation="6dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?android:attr/selectableItemBackground"
                android:orientation="horizontal"
                android:padding="@dimen/std_padding">

                <ImageView
                    android:id="@+id/img_profile"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    app:agentImageUrl="@{user.userProfile}"
                    android:scaleType="center"
                    android:elevation="1dp"
                    android:contentDescription="@string/user_image" />

                <TextView
                    android:id="@+id/nameTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/std_margin"
                    android:layout_toEndOf="@id/img_profile"
                    android:text="@{user.userName}"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:id="@+id/lastChatTextview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/img_profile"
                    android:layout_alignStart="@+id/nameTextView"
                    android:text="@string/good_night" />

                <TextView
                    android:id="@+id/txt_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/_12_34_am"
                    tools:ignore="RelativeOverlap" />

            </RelativeLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</layout>