<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="message"
            type="com.message.toschat.model.Message" />

        <variable
            name="user"
            type="com.message.toschat.model.User" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/layout_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/actionBarSize"
                app:navigationIcon="@drawable/ic_back">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/user_image"
                    android:layout_width="@dimen/std_navigation_icon"
                    android:layout_height="@dimen/std_navigation_icon"
                    app:agentImageUrl="@{user.userProfile}"
                    android:src="@drawable/ic_holder" />

                <TextView
                    android:id="@+id/user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="@{user.userName}"
                    android:textSize="16sp"
                    android:textColor="@color/colorWhite"
                    tools:ignore="RtlHardcoded" />

            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/mainSendMessageLayout"
            android:layout_below="@id/layout_toolbar"
            android:layout_marginTop="-7dp"
            android:layout_marginBottom="11dp"
            android:background="@color/colorPrimaryDark">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/chatRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:reverseLayout="true"
                app:stackFromEnd="true" />

        </ScrollView>

        <TextView
            android:id="@+id/textViewStartToChat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/start_to_chat"
            android:textAlignment="center"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/mainSendMessageLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom"
            android:background="@color/colorWhite"
            android:gravity="end|center_horizontal"
            android:minHeight="48dp"
            android:orientation="horizontal"
            android:padding="@dimen/std_padding">

            <EditText
                android:id="@+id/messageEditText"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@color/colorWhite"
                android:ems="10"
                android:hint="@string/say_something"
                android:inputType="text"
                android:paddingStart="@dimen/std_padding" />


            <ImageView
                android:id="@+id/sendButton"
                android:layout_width="@dimen/std_button_icon_width"
                android:layout_height="@dimen/std_button_icon_width"
                android:layout_gravity="center_vertical"
                android:rotation="45"
                android:src="@drawable/btn_send"
                android:translationZ="20dp"
                android:contentDescription="@string/todo" />

        </LinearLayout>


    </RelativeLayout>
</layout>